--- a/views/user/product-detail.ejs
+++ b/views/user/product-detail.ejs
@@ -6,22 +6,16 @@
     <%- include('../includes/navigation') %>
 
     <main>
-      <h1>All Products</h1>
-      <% if (products.length === 0) { %>
-        <p>No products found</p>
-      <% } else { %>
-        <p>We have a wide range of products for you to choose from</p>
-      <% } %>
+      <h1 style="text-align: center;">Current Product</h1>
       
       <div class="products">
-        <% for (let product of products) { %>
-          <div class="product">
+          <div class="product" style="margin: 20px auto;width: 50%;">
             <img src="https://picsum.photos/200" alt="Product" />
             <h2><%= product.title %></h2>
+            <p><%= product.description %></p>
             <p>Price: $<%= product.price %></p>
             <button>Add to Cart</button>
           </div>
-        <% } %>
       </div>
     </main>
   </body>
