--- a/views/user/product-detail.ejs
+++ b/views/user/product-detail.ejs
@@ -14,7 +14,10 @@
             <h2><%= product.title %></h2>
             <p><%= product.description %></p>
             <p>Price: $<%= product.price %></p>
-            <button>Add to Cart</button>
+            <form action="/cart" method="POST">
+              <input type="hidden" name="productId" value="<%= product.id %>">
+              <button type="submit">Add to Cart</button>
+            </form>
           </div>
       </div>
     </main>
