--- a/views/user/products.ejs
+++ b/views/user/products.ejs
@@ -19,7 +19,11 @@
             <img src="https://picsum.photos/200" alt="Product" />
             <h2><%= product.title %></h2>
             <p>Price: $<%= product.price %></p>
-            <button>Add to Cart</button>
+            <button><a href="http://localhost:3000/products/<%= product.id %>">View Details</a></button>
+            <form action="/cart" method="POST">
+              <input type="hidden" name="productId" value="<%= product.id %>">
+              <button type="submit">Add to Cart</button>
+            </form>
           </div>
         <% } %>
       </div>
