--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -1,12 +1,50 @@
 <%- include('../includes/header') %>
+  <link rel='stylesheet' href='/css/all-products.css'>
   </head>
-  
+
   <body>
     <%- include('../includes/navigation') %>
 
     <main>
       <h1>Cart</h1>
-      <p>Your Cart!</p>
+      <% if (products.length === 0) { %>
+        <p>No products found</p>
+      <% } else { %>
+      <div class="products">
+        <% for (let product of products) { %>
+          <div class="product">
+            <img src="https://picsum.photos/200" alt="Product" />
+            <h2><%= product.title %></h2>
+            <p>Price: $<%= product.price %></p>
+            <p>Count: <%= product.count %></p>
+            <p>Total: $<%= product.price * product.count %></p>
+            <form action="/cart/increase" method="POST">
+              <input type="hidden" name="productId" value="<%= product.id %>">
+              <button type="submit">+1</button>
+            </form>
+            <form action="/cart/decrease" method="POST">
+              <input type="hidden" name="productId" value="<%= product.id %>">
+              <button type="submit">-1</button>
+            </form>
+            <form action="/cart/remove" method="POST">
+              <input type="hidden" name="productId" value="<%= product.id %>">
+              <button type="submit">Delete</button>
+            </form>
+          </div>
+        <% } %>
+      </div>
+      <h2>Total Price: $<%= totalPrice %></h2>
+      <form action="/checkout" method="POST">
+        <button type="submit">Checkout</button>
+      </form>
+      <form action="/cart/clear" method="POST">
+        <button type="submit">Clear Cart</button>
+      </form>
+      <form action="/products" method="GET">
+        <button type="submit">Continue Shopping</button>
+      </form>
+      <% } %>
     </main>
   </body>
 </html>
+
