--- a/public/css/all-products.css
+++ b/public/css/all-products.css
@@ -34,6 +34,8 @@ main .products .product .price {
 }
 
 main .products .product button {
+  width: 100%;
+  margin-top: 5px;
   padding: 10px;
   background-color: #333;
   color: #fff;
