--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f4f4f4;
