--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -19,10 +19,10 @@
             <img src="https://picsum.photos/200" alt="Product" />
             <h2><%= product.title %></h2>
             <p>Price: $<%= product.price %></p>
-            <button><a href="/products/<%= product.id %>">View Details</a></button>
-            <button><a href="/admin/edit-product/<%= product.id %>">Edit</a></button>
+            <button><a href="/products/<%= product._id %>">View Details</a></button>
+            <button><a href="/admin/edit-product/<%= product._id %>">Edit</a></button>
             <form action="/admin/delete-product" method="post" >
-              <input type="hidden" name="id" value="<%= product.id %>"/>
+              <input type="hidden" name="_id" value="<%= product._id %>"/>
               <button type="submit">Delete</button>
             </form>
           </div>
