--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -15,7 +15,7 @@
             <p><%= product.description %></p>
             <p>Price: $<%= product.price %></p>
             <form action="/cart" method="POST">
-              <input type="hidden" name="productId" value="<%= product.id %>">
+              <input type="hidden" name="productId" value="<%= product._id %>">
               <button type="submit">Add to Cart</button>
             </form>
           </div>
