--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,8 +5,10 @@
     <%- include('includes/navigation') %>
 
     <main>
-      <h1>404 Not Found</h1>
-      <p>The page you are looking for does not exist.</p>
+      <h1>Oops! Something Went Wrong</h1>
+      <p>An error occurred while processing your request.</p>
+      <p><%= error %></p>
+      <p>Please try again or return to the <a href="/">homepage</a>.</p>
     </main>
   </body>
 </html>
