fix: unify error handling variable names across controllers and views

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -7,7 +7,7 @@
     <main>
       <h1>Oops! Something Went Wrong</h1>
       <p>An error occurred while processing your request.</p>
-      <p><%= error %></p>
+      <p><%= err %></p>
       <p>Please try again or return to the <a href="/">homepage</a>.</p>
     </main>
   </body>
