feat: replace checkout functionality with orders management and update navigation links

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -23,9 +23,9 @@
     </li>
     <li>
       <a
-        href="/checkout"
-        class= <%= currentPath === '/checkout' ? 'active' : '' %>
-        >Checkout</a
+        href="/orders"
+        class= <%= currentPath === '/orders' ? 'active' : '' %>
+        >Orders</a
       >
     </li>
     <li>
