--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -36,8 +36,8 @@
       </div>
       <h2>Total Price: $<%= totalPrice %></h2>
       <div class="cart-controls">
-        <form action="/checkout" method="get">
-          <button type="submit">Checkout</button>
+        <form action="/orders" method="POST">
+          <button type="submit">Get Order</button>
         </form>
         <form action="/cart/clear" method="POST">
           <button type="submit">Clear Cart</button>
