--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -42,6 +42,13 @@
         >Admin Products</a
       >
     </li>
+    <li>
+      <a
+        href="/login"
+        class= <%= currentPath === '/login' ? 'active' : '' %>
+        >Login</a
+      >
+    </li>
 
   </ul>
 </header>
