feat: implement signup functionality and update login views

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -49,6 +49,13 @@
         >Login</a
       >
     </li>
+    <li>
+      <a
+        href="/signup"
+        class= <%= currentPath === '/signup' ? 'active' : '' %>
+        >Signup</a
+      >
+    </li>
 
   </ul>
 </header>
