--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,8 +6,14 @@
     <%- include('../includes/navigation') %>
 
     <main>
-      <h2>Login</h2>
-      <form action="/login" method="POST">
+      <h2><% if (signup) { %>Signup<% } else { %>Login<% } %></h2>
+      <form action="/<% if (signup) { %>signup<% } else { %>login<% } %>" method="POST">
+        <% if (signup) { %>
+          <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required />
+          </div>
+        <% } %>
         <div>
           <label for="email">Email</label>
           <input type="email" id="email" name="email" required />
@@ -16,7 +22,7 @@
           <label for="password">Password</label>
           <input type="password" id="password" name="password" required />
         </div>
-        <button type="submit">Login</button>
+        <button type="submit"><% if (signup) { %>Signup<% } else { %>Login<% } %></button>
       </form>
     </main>
   </body>
