feat: enhance authentication and authorization features with session management and role checks

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -56,6 +56,11 @@
         >Signup</a
       >
     </li>
+    <li>
+      <form action="/logout" method="POST">`
+        <button type="submit">Logout</button>
+      </form>
+    </li>
 
   </ul>
 </header>
