--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -14,10 +14,19 @@
             <h2><%= product.title %></h2>
             <p><%= product.description %></p>
             <p>Price: $<%= product.price %></p>
-            <form action="/cart" method="POST">
-              <input type="hidden" name="productId" value="<%= product._id %>">
-              <button type="submit">Add to Cart</button>
-            </form>
+            
+            <% if (role === "admin") { %>
+              <button><a href="/admin/edit-product/<%= product._id %>">Edit</a></button>
+              <form action="/admin/delete-product" method="post" >
+                <input type="hidden" name="_id" value="<%= product._id %>"/>
+                <button type="submit">Delete</button>
+              </form>
+            <% } else { %> 
+              <form action="/cart" method="POST">
+                <input type="hidden" name="productId" value="<%= product._id %>">
+                <button type="submit">Add to Cart</button>
+              </form>
+            <% } %>
           </div>
       </div>
     </main>
