--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -22,6 +22,12 @@
           <label for="password">Password</label>
           <input type="password" id="password" name="password" required />
         </div>
+        <% if (signup) { %>
+          <div>
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" required />
+          </div>
+        <% } %>
         <button type="submit"><% if (signup) { %>Signup<% } else { %>Login<% } %></button>
       </form>
     </main>
