--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -32,7 +32,8 @@
           </div>
         <% } %>
         <button type="submit"><% if (signup) { %>Signup<% } else { %>Login<% } %></button>
-        
+        <p style="color:blue; margin:10px auto 0; font-size:1.2rem;"><a href="/verify">Reset Password</a></p>
+
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       </form>
     </main>
