--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -10,7 +10,7 @@
       <% if (errorMessage.length > 0) { %>
         <p style="color:red; margin-bottom:10px; font-size:1.2rem;"><%= errorMessage %></p>
       <% } %>
-      <form action="/<% if (signup) { %>signup<% } else { %>login<% } %>" method="POST">
+      <form action="/<% if (signup) { %>signup<% } else { %>login<% } %>" method="POST" novalidate>
         <% if (signup) { %>
           <div>
             <label for="name">Name</label>
