feat: enhance login and signup forms with pre-filled values and input normalization

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -14,12 +14,12 @@
         <% if (signup) { %>
           <div>
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" required />
+            <input type="text" id="name" name="name" required value="<%= oldValues.name %>"/>
           </div>
         <% } %>
         <div>
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
+          <input type="email" id="email" name="email" required value="<%= oldValues.email %>" />
         </div>
         <div>
           <label for="password">Password</label>
