--- a/views/admin/manage-product.ejs
+++ b/views/admin/manage-product.ejs
@@ -7,23 +7,29 @@
 
     <main>
       <h2><% if (edit) { %>Edit Product<% } else { %>Add Product<% } %></h2>
+
+      <% if (errorMessage.length > 0) { %>
+        <p style="color:red; margin-bottom:10px; font-size:1.2rem;"><%= errorMessage %></p>
+      <% } %>
+
       <form action="/admin/<% if (edit) {%>edit-product/<%= product._id %><% } else { %>add-product<% } %>" method="POST">
         <div>
           <label for="title">Title</label>
-          <input type="text" id="title" name="title" required value="<% if (edit) {%><%= product.title %><% } %>"/>
+          <input type="text" id="title" name="title" required value="<% if (edit) {%><%= product.title %><% } else { %><%= oldData.title %><% } %>"/>
         </div>
         <div>
           <label for="price">Price</label>
-          <input type="number" id="price" name="price" required value="<% if (edit) {%><%= product.price %><% } %>"/>
+          <input type="number" id="price" name="price" required value="<% if (edit) {%><%= product.price %><% } else { %><%= oldData.price %><% } %>"/>
         </div>
         <div>
           <label for="description">Description</label>
-          <textarea id="description" name="description" required><% if (edit) {%><%= product.description %><% } %></textarea>
+          <textarea id="description" name="description" required><% if (edit) {%><%= product.description %><% } else { %><%= oldData.description %><% } %></textarea>
         </div>
         <button type="submit"><% if (edit) { %>Edit Product<% } else { %>Add Product<% } %></button>
 
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       </form>
+
     </main>
   </body>
 </html>
