refactor: integrate multer for file uploads and update manage-product form

--- a/views/admin/manage-product.ejs
+++ b/views/admin/manage-product.ejs
@@ -12,10 +12,14 @@
         <p style="color:red; margin-bottom:10px; font-size:1.2rem;"><%= errorMessage %></p>
       <% } %>
 
-      <form action="/admin/<% if (edit) {%>edit-product/<%= product._id %><% } else { %>add-product<% } %>" method="POST">
+      <form action="/admin/<% if (edit) {%>edit-product/<%= product._id %><% } else { %>add-product<% } %>" method="POST" enctype="multipart/form-data">
         <div>
           <label for="title">Title</label>
           <input type="text" id="title" name="title" required value="<% if (edit) {%><%= product.title %><% } else { %><%= oldData.title %><% } %>"/>
+        </div>
+        <div>
+          <label for="productImage">Image</label>
+          <input type="file" id="productImage" name="productImage" required value="<% if (edit) {%><%= product.productImage %><% } else { %><%= oldData.productImage %><% } %>"/>
         </div>
         <div>
           <label for="price">Price</label>
