--- a/public/css/all-products.css
+++ b/public/css/all-products.css
@@ -17,7 +17,8 @@ main .products .product {
 }
 
 main .products .product img {
-  max-width: 100%;
+  width: 200px;
+  height: 200px;
   border-radius: 10px;
 }
 
