--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -14,7 +14,7 @@
       <div class="products">
         <% for (let product of products) { %>
           <div class="product">
-            <img src="https://picsum.photos/200" alt="Product" />
+            <img src="/productImages/<%= product.imagePath %>" alt="Product" />
             <h2><%= product.title %></h2>
             <p>Price: $<%= product.price %></p>
             <p>Count: <%= product.count %></p>
