--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -10,7 +10,7 @@
       
       <div class="products">
           <div class="product" style="margin: 20px auto;width: 50%;">
-            <img src="https://picsum.photos/200" alt="Product" />
+            <img src="/productImages/<%= product.imagePath %>" alt="Product" />
             <h2><%= product.title %></h2>
             <p><%= product.description %></p>
             <p>Price: $<%= product.price %></p>
