--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -28,6 +28,7 @@
               </li>
             <% } %>
           </ul>
+          <a href="/orders/invoice/<%= order._id %>" target="_blank" >invoice</a>
         </div>
       <% } %>
     </div>
