--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -23,6 +23,7 @@
             <button><a href="/admin/edit-product/<%= product._id %>">Edit</a></button>
             <form action="/admin/delete-product" method="post" >
               <input type="hidden" name="_id" value="<%= product._id %>"/>
+              <input type="hidden" name="oldImage" value="<%= product.imagePath %>"/>
               <button type="submit">Delete</button>
 
               <input type="hidden" name="_csrf" value="<%= csrfToken %>">
